# noko

./: .gitignore  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: tests.yml
example/: build.gradle.kts
example/src/androidMain/: AndroidManifest.xml
example/src/androidMain/kotlin/com/linroid/noko/example/: App.kt  MainActivity.kt
example/src/androidMain/res/values/: themes.xml
example/src/commonMain/kotlin/com/linroid/noko/example/: Terminal.kt
example/src/desktopMain/kotlin/com/linroid/noko/example/: Main.kt
knode/: .gitignore  consumer-rules.pro
knode/src/androidTest/java/com/linroid/knode/: DNSTest.kt  ExecutableTest.kt  JSObjectTest.kt  ReferenceTest.kt
knode/src/main/: AndroidManifest.xml
knode/src/main/cpp/: .gitignore  CMakeLists.txt  EnvHelper.cpp  log.h
knode/src/main/cpp/observable/: PropertiesObserver.cpp
knode/src/main/cpp/types/: JSError.cpp  JSError.h  JSFunction.cpp  JSFunction.h  JSNull.cpp  JSNull.h  JSObject.cpp  JSPromise.cpp  JSPromise.h  JSValue.h
knode/src/main/java/com/linroid/knode/: Cououtines.kt  JSValueReference.kt  KNode.kt
knode/src/main/java/com/linroid/knode/js/: JSArray.kt  JSContext.kt  JSError.kt  JSInteger.kt  JSNull.kt  JSObject.kt  (+4 more)
noko/: build.gradle.kts  consumer-rules.pro  gradle.properties  settings.gradle.kts
noko/src/androidAndroidTest/kotlin/com/linroid/noko/: SetupNode.android.kt  TestApplication.kt
noko/src/androidMain/: AndroidManifest.xml
noko/src/androidMain/kotlin/com/linroid/noko/: Cououtines.kt  JSException.kt  JSRef.kt  JSValueReference.kt  KNode.kt  Noko.android.kt  Noko.kt  Platform.android.kt  ReferenceWatcher.kt  StdOutput.kt
noko/src/androidTest/: AndroidManifest.xml
noko/src/androidTest/kotlin/com/linroid/knode/: DNSTest.kt  ExecutableTest.kt  JSContextTest.kt  JSObjectTest.kt  KNodeTest.kt  ReferenceTest.kt  extensions.kt
noko/src/androidTest/kotlin/com/linroid/noko/: DNSTest.kt  ExecutableTest.kt  JSContextTest.kt  JSObjectTest.kt  JsObjectTest.kt  KNodeTest.kt
noko/src/commonMain/cpp/: CMakeLists.txt  EnvHelper.cpp  EnvHelper.h  NodeRuntime.cpp  NodeRuntime.h  Noko.cpp  Noko.h  __onload.cpp  log.h  macros.h  main.cpp
noko/src/commonMain/cpp/observable/: PropertiesObserver.cpp  PropertiesObserver.h
noko/src/commonMain/cpp/types/: JSArray.cpp  JSArray.h  JSBoolean.cpp  JSBoolean.h  JSContext.cpp  JSContext.h  JSError.cpp  JSError.h  JSFunction.cpp  JSFunction.h  JSNull.cpp  JSNull.h  JSNumber.cpp  JSNumber.h  JSObject.cpp  JSObject.h  JSPromise.cpp  JSPromise.h  JSString.cpp  JSString.h  JSUndefined.cpp  JSUndefined.h  JSValue.cpp  JSValue.h  JavaCallback.cpp  JavaCallback.h
noko/src/commonMain/kotlin/com/linroid/noko/: Environments.kt  JSException.kt  JsException.kt  LifecycleListener.kt  NativePointer.kt  Node.kt  Noko.kt  Platform.kt  StdOutput.kt  Thread.kt
noko/src/commonTest/kotlin/com/linroid/noko/: DnsTest.kt  NodeTest.kt  SetupNode.kt  StartNodeTest.kt  Utils.kt  WithNode.kt
noko/src/desktopMain/kotlin/com/linroid/noko/: Platform.desktop.kt  Platform.jvm.kt
noko/src/desktopTest/kotlin/com/linroid/noko/: SetupNode.desktop.kt
noko/src/jvmMain/cpp/: CMakeLists.txt  EnvHelper.cpp  EnvHelper.h  Node.cpp  Node.h  NodeRuntime.cpp  NodeRuntime.h  Noko.cpp  Noko.h  __onload.cpp  exec.c  log.h  macros.h  node_runtime.cpp  node_runtime.h  runtime.cpp  runtime.h
noko/src/jvmMain/cpp/observable/: PropertiesObserver.cpp  PropertiesObserver.h  properties_observer.cpp  properties_observer.h
noko/src/jvmMain/cpp/types/: JSArray.cpp  JSBoolean.cpp  JSBoolean.h  JSContext.cpp  JSContext.h  JSError.cpp  JSFunction.cpp  JSFunction.h  JSNull.cpp  JSNumber.cpp  JSObject.cpp  JSObject.h  JSPromise.cpp  JSString.cpp  JSString.h  JSUndefined.cpp  JSValue.cpp  JSValue.h  JavaCallback.cpp  JavaCallback.h  JsArray.cpp  JsArray.h  JsBoolean.cpp  JsBoolean.h  JsError.cpp  JsError.h  JsFunction.cpp  JsFunction.h  JsNull.cpp  JsNull.h  JsNumber.cpp  JsNumber.h  JsObject.cpp  JsObject.h  JsPromise.cpp  JsPromise.h  JsString.cpp  JsString.h  JsUndefined.cpp  JsUndefined.h  (+34 more)
noko/src/jvmMain/cpp/util/: env_helper.cpp  env_helper.h  java_callback.cpp  java_callback.h  java_function.cpp  java_function.h  jni_helper.cpp  jni_helper.h  log.h  macros.h
noko/src/jvmMain/kotlin/com/linroid/noko/: NativePointer.jvm.kt  Node.kt  Thread.jvm.kt
noko/src/jvmTest/kotlin/com/linroid/noko/: NodeTest.jvm.kt
src/androidTest/java/com/linroid/knode/: ExampleInstrumentedTest.java  ExecutableTest.kt  JSContextTest.kt  JSObjectTest.kt  KNodeTest.kt  TestExt.kt  extensions.kt
src/main/: AndroidManifest.xml
src/main/assets/: knode_versions.json
src/main/cpp/: CMakeLists.txt  EnvHelper.cpp  EnvHelper.h  JniPropertyObserver.cpp  JniPropertyObserver.h  NodeRuntime.cpp  NodeRuntime.h  V8Runtime.cpp  V8Runtime.h  __onload.cpp  base64.cpp  exec.c  log.h  macros.h  main.cpp  util.h
src/main/cpp/jni/: JSArray.cpp  JSArray.h  JSBoolean.cpp  JSBoolean.h  JSContext.cpp  JSContext.h  JSError.cpp  JSError.h  JSFunction.cpp  JSFunction.h  JSNull.cpp  JSNull.h  JSNumber.cpp  JSNumber.h  JSObject.cpp  JSObject.h  JSPromise.cpp  JSPromise.h  JSString.cpp  JSString.h  JSUndefined.cpp  JSUndefined.h  JSValue.cpp  JSValue.h  JVMCallback.cpp  JVMCallback.h  JavaCallback.cpp  JavaCallback.h  JniCallback.cpp  JniCallback.h  macros.h
src/main/cpp/types/: JSContext.cpp  JSNumber.h  JSString.cpp  JSUndefined.cpp
src/main/java/com/linroid/knode/: Cououtines.kt  JSException.kt  JSRef.kt  JSValueReference.kt  KNode.kt  ObservableObject.kt  ReferenceWatcher.kt  StdOutput.kt  VirtualFileSystem.kt
src/main/java/com/linroid/knode/js/: Bind.kt  BindJS.kt  JSArray.kt  JSBoolean.kt  JSContext.kt  JSError.kt  JSException.kt  JSFunction.kt  JSNull.kt  JSNumber.kt  JSObject.kt  JSPrimitive.kt  JSPromise.kt  JSString.kt  JSUndefined.kt  JSValue.kt  jsexport.kt
src/main/java/com/linroid/knode/observable/: PropertyObserver.kt
src/main/java/com/linroid/knode/path/: RealFileSystem.kt
src/main/res/values/: strings.xml
src/test/java/com/linroid/knode/: ExampleUnitTest.java
(+103 files in other folders)
